--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@material-ui/icons": "^4.11.3",
     "@tailwindcss/vite": "^4.0.1",
+    "chart.js": "^4.4.7",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
