--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
