--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.13.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "promisify": "^0.0.3",
     "readdirp": "^4.1.2",
     "url": "^0.11.4"
   }
