git ignore changed

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,3 +1,36 @@
-node_modules
-node_modules/*
-env
+# Node modules
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Environment variables
+.env
+
+# OS-specific
+.DS_Store        # macOS
+Thumbs.db        # Windows
+
+# Build artifacts
+dist/
+build/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.swp
+
+# Coverage reports
+coverage/
+
+# Temporary files
+*.tmp
+*.bak
+
+# Database files
+*.sqlite
+*.db
