--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,17 +18,19 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@tailwindcss/vite": "^4.0.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.3",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
