--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=17450
+DB_HOST=localhost
+DB_PORT=3300
 DB_USER=root
-DB_PASSWORD=NrELZtGPqvSoBMqrKNEBtxZTOiMlIBhC
+DB_PASSWORD=root
 DB_NAME=second-hand-hub
 SECRET_KEY="jwtSecretKey"
 ACCESS_TOKEN = "access_token"
